--- a/templates/music/base.html
+++ b/templates/music/base.html
@@ -51,7 +51,7 @@
                     <ul id="navigation">
                       <li>
                         <div class="s129">
-                          <form action="." method="POST" id="search"> {% csrf_token %}
+                          <form action="{% url 'music:search_list'%}" method="POST" id="search"> {% csrf_token %}
                             <div class="inner-form">
                               <div class="input-field">
                                 <button class="btn-search" type="submit" value="submit!">
@@ -68,7 +68,7 @@
                         </div>
                       </li>
                       <li><a href="{% url 'music:home' %}">home</a></li>
-                      <li><a href="{% url 'music:music-list' %}">tracks</a></li>
+                      <li><a href="{% url 'music:music_list' %}">tracks</a></li>
                       <li><a href="{% url 'artist:artist_list' %}">Artists<i></i></a></li>
                       <li><a href="#">pages <i class="ti-angle-down"></i></a>
                         <ul class="submenu">
@@ -80,9 +80,9 @@
                       <li><a href="#">{{request.user}} <i class="ti-angle-down"></i></a>
                         <ul class="submenu">
                           <li><a href="#">Profile</a></li>
-                          <li><a href="#">Logout</a></li>
+                          <li><a href="{% url 'account:logout' %}">Logout</a></li>
                         </ul>
-                      </li> {% else %} <li><a href="#">Login</a>
+                      </li> {% else %} <li><a href="{% url 'account:login' %}">Login</a>
                       </li>
                       {% endif %}
                     </ul>
