--- a/templates/music/index.html
+++ b/templates/music/index.html
@@ -2,7 +2,22 @@
 {% load static %}
 
 {% block content %}
-
+<style>
+  h1 {
+    color: #ffffff;
+    font-size: 120px;
+    width: auto;
+    height: 300px;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    filter: drop-shadow(2px 4px 6px black);
+    font-family: -webkit-pictograph;
+    font-weight: bold;
+    user-select: none;
+  }
+</style>
 <!-- slider_area_start -->
 <link rel="stylesheet" href="{% static 'home/css/background.css' %}">
 <h1>MUSICIAN</h1>
